feat: add Electron and video processing dependencies, refactor app component for video analysis, and update project structure

--- a/docs/stories/1.1.story.md
+++ b/docs/stories/1.1.story.md
@@ -31,29 +31,29 @@
   - [x] Configurar ambiente virtual Python
   - [x] Testar instalação das dependências
 
-- [x] Configurar ambiente Electron/Angular (AC: 3)
+- [] Configurar ambiente Electron/Angular (AC: 3)
 
-  - [x] Inicializar projeto Electron
-  - [x] Configurar Angular dentro do Electron
-  - [x] Configurar package.json com dependências necessárias
-  - [x] Testar instalação das dependências
+  - [] Inicializar projeto Electron
+  - [] Configurar Angular dentro do Electron
+  - [] Configurar package.json com dependências necessárias
+  - [] Testar instalação das dependências
 
-- [x] Implementar aplicação Electron básica (AC: 4)
+- [] Implementar aplicação Electron básica (AC: 4)
 
-  - [x] Criar janela principal
-  - [x] Implementar layout básico
-  - [x] Testar inicialização da aplicação
+  - [] Criar janela principal
+  - [] Implementar layout básico
+  - [] Testar inicialização da aplicação
 
-- [x] Implementar script Python principal (AC: 5)
+- [] Implementar script Python principal (AC: 5)
 
-  - [x] Criar main_core.py
-  - [x] Implementar função básica de resposta
-  - [x] Testar execução do script
+  - [] Criar main_core.py
+  - [] Implementar função básica de resposta
+  - [] Testar execução do script
 
-- [x] Implementar comunicação básica (AC: 6)
-  - [x] Configurar IPC no Electron
-  - [x] Implementar chamada básica ao Python
-  - [x] Testar comunicação bidirecional
+- [] Implementar comunicação básica (AC: 6)
+  - [] Configurar IPC no Electron
+  - [] Implementar chamada básica ao Python
+  - [] Testar comunicação bidirecional
 
 ## Dev Technical Guidance
 
